--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
 					</p>
 				</div>
 			</button>
-			<button class="box hidden">
+			<button class="box" onclick="window.open('https://github.com/iRheKs/irheks.github.io', '_blank')"">
 				<div class="imageBox">
 					<div class="imageContainer">
-						<img src="resources/games/" alt="">
+						<img src="resources/projects/" alt="">
 					</div>
 				</div>
 				<div class="text description">
-					<h2>Title</br></h2>
-					<p>Made for</br>
-						Commentary.
+					<h2>Francisco Montañés Web</br></h2>
+					<p>The link to the source code of this web</br>
+						Here you can see the source code of this webpage.
 					</p>
 				</div>
 			</button>
