--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 		</div>
 	</div>
 
-
 	<div id="Projects" class="tabcontent list">
 
 		<div class="row">
@@ -76,10 +75,23 @@
 					</p>
 				</div>
 			</button>
+			<button class="box" onclick="window.open('https://github.com/iRheKs/Shira', '_blank')"">
+				<div class="imageBox">
+					<div class="imageContainer">
+						<img src="resources/projects/" alt="">
+					</div>
+				</div>
+				<div class="text description">
+					<h2>Shira Discord Bot</br></h2>
+					<p>Discord Bot Made in NodeJs</br>
+						Here is the code in development of a game-like bot for Discord. It's a claiming cards game type with a trivia twist.
+					</p>
+				</div>
+			</button>
 			<button class="box hidden">
 				<div class="imageBox">
 					<div class="imageContainer">
-						<img src="resources/games/" alt="">
+						<img src="resources/projects/" alt="">
 					</div>
 				</div>
 				<div class="text description">
