--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					For more information you can contact me on my <a
 						href="https://www.linkedin.com/in/francisco-monta%C3%B1es-barbudo/" target="_blank">LinkedIn</a>
 					page.</br>
-					Check out my CV. <a href="resources/cvs/CV-Francisco-Montañés-Barbudo-English.pdf" download target="_blank">EN</a> / <a href="resources/cvs/CV-Francisco-Montañés-Barbudo.pdf" download target="_blank">SP</a>.</br>
+					Check out my CV. <a href="resources/cvs/CV-Francisco-Montañés-Barbudo-English-(2024).pdf" download target="_blank">EN</a> / <a href="resources/cvs/CV-Francisco-Montañés-Barbudo-(2024).pdf" download target="_blank">SP</a>.</br>
 					You can also send me an email to <a href="mailto:coder@franciscomontanes.com">coder@franciscomontanes.com</a>.
 				</p>
 			</div>
