Added 2 more projects
Added 2 more projects to the list:
Talk Tailor (TFG)
Versus Shooter (prototype)

--- a/index.html
+++ b/index.html
@@ -62,6 +62,34 @@
 					</p>
 				</div>
 			</button>
+			<button class="box" onclick="window.open('https://github.com/iRheKs/VersusShooter', '_blank')">
+				<div class="imageBox">
+					<div class="imageContainer">
+						<img src="resources/projects/" alt="">
+					</div>
+				</div>
+				<div class="text description">
+					<h2>Versus Shooter</br></h2>
+					<p>A small project made in Unty</br>
+						This was one of my first game prototypes made in Unity. It's a simple pong like game where players shoot eachother. 
+						I'm planing on updating and improving this concept to make a small game out of it.
+					</p>
+				</div>
+			</button>
+			<button class="box" onclick="window.open('https://github.com/iRheKs/TalkTailor', '_blank')">
+				<div class="imageBox">
+					<div class="imageContainer">
+						<img src="resources/projects/" alt="">
+					</div>
+				</div>
+				<div class="text description">
+					<h2>Talk Tailor</br></h2>
+					<p>This was my end of degree tool project made in Unty</br>
+						This project consists of two parts: a DLL made in C++ and the Unity project itself. 
+						It's a native plugin that allows you to create dialogs with a node based system.
+					</p>
+				</div>
+			</button>
 			<button class="box" onclick="window.open('https://github.com/iRheKs/irheks.github.io', '_blank')"">
 				<div class="imageBox">
 					<div class="imageContainer">
@@ -121,9 +149,6 @@
 			<div class="container">
 				<div class="skills">
 					<div class="skil-column col-res">
-						<img src="resources/skills/c++.png">
-					</div>
-					<div class="skil-column col-res">
 						<img src="resources/skills/csharp.png">
 					</div>
 					<div class="skil-column col-res">
@@ -139,13 +164,16 @@
 						<img src="resources/skills/mongodb.png">
 					</div>
 					<div class="skil-column col-res">
+						<img src="resources/skills/node-js.png">
+					</div>
+					<div class="skil-column col-res">
+						<img src="resources/skills/c++.png">
+					</div>
+					<div class="skil-column col-res">
 						<img src="resources/skills/html5.png">
 					</div>
 					<div class="skil-column col-res">
 						<img src="resources/skills/css.png">
-					</div>
-					<div class="skil-column col-res">
-						<img src="resources/skills/node-js.png">
 					</div>
 				</div>
 			</div>
